Implementación completa del sistema de registro de usuarios
- Añadida la clase RegisterService con validaciones completas y manejo
de errores
- Implementado UsuarioNuevoBuilder para creación y configuración inicial
del usuario
- Incorporados DTOUsuarioRegistro y excepciones específicas
(UsuarioExistenteException, CorreoExistenteException)
- Añadido manejo global de excepciones (GlobalExceptionHandler) con
respuestas estandarizadas mediante ApiResponse y ErrorResponse
- Ajustada configuración de logs y limpieza de dependencias innecesarias
(eliminación de Testcontainers)
- Unificado sistema de respuestas del servidor en formato clave-valor
para compatibilidad multilenguaje
- Preparado flujo completo de registro y validaciones previas al login

--- a/LoginService/src/main/resources/application.properties
+++ b/LoginService/src/main/resources/application.properties
@@ -7,4 +7,14 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 # Opcional, Spring 3 suele inferirlo
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
+# Nivel global
+logging.level.root=INFO
+
+# Nivel por paquete (tu proyecto)
+logging.level.es.alejandroperellon=DEBUG
+
+# Cambiar formato de consola
+logging.pattern.console=%d{HH:mm:ss} %-5level [%thread] %logger{36} - %msg%n
