--- a/LoginService/pom.xml
+++ b/LoginService/pom.xml
@@ -30,7 +30,11 @@
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
-	
+		<dependency>
+			<groupId>com.alejandroperellon</groupId>
+			<artifactId>multilingual_support</artifactId>
+			<version>0.0.8-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -66,11 +70,6 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.testcontainers</groupId>
-			<artifactId>junit-jupiter</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
